@@ -6192,4 +6192,14 @@ ef) x/x,mark
 /(?<=\G.)/g,aftertext
     abc
 
+/(?<=(?=.)?)/
+
+/(?<=(?=.)?+)/
+
+/(?<=(?=.)*)/
+
+/(?<=(?=.){4,5})/
+
+/(?<=(?=.){4,5}x)/
+
 # End of testinput1 
